--- a/app/src/main/res/layout/list_item_with_delete_button.xml
+++ b/app/src/main/res/layout/list_item_with_delete_button.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="130dp"
     android:orientation="horizontal"
     android:padding="15dp">
 
     <TextView
         android:id="@+id/text_view_location"
-        android:layout_width="269dp"
+        android:layout_width="207dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textSize="18sp" />
 
     <ImageButton
         android:id="@+id/button_delete"
@@ -21,6 +22,10 @@
         android:onClick="onDeleteLocation"
         android:scaleType="fitCenter"
         android:src="@drawable/delete" />
+
+    <Space
+        android:layout_width="12dp"
+        android:layout_height="match_parent" />
 
     <ImageButton
         android:id="@+id/edit_button"
